# qg

./: .gitignore  CMakeLists.txt
matlab/: CMakeLists.txt  QG.m  QG_apply.cpp  QG_bilin.cpp  QG_compute_precon.cpp  QG_compute_uv.cpp  QG_free.cpp  QG_get_nondim.cpp  QG_get_par.cpp  QG_gradient.cpp  QG_grid.cpp  QG_init.cpp  QG_jacob.cpp  QG_jacobian.cpp  QG_mass.cpp  QG_rhs.cpp  QG_set_par.cpp  QG_solve.cpp  crs2sp.m  plotQG.m  stochforcing.m
matlab/MLQG/: ESN_EOF_eddyforcing.m  ESN_eddyforcing.m  ESN_wavelet_eddyforcing.m  PVtest.m  arg2value.m  average.m  blockpermutation.m  compile_and_submit.sh  compile_mfile.sh  computeQGspectrum.m  create_description.m  create_eddyforcing_data.m  create_fullmodel_data.m  create_testdata.m  create_training_data.m  create_wavelet_basis.m  experiment.m  experiment_core.m  gather_plotdata.m  haarmat.m  main.m  movie_eddyforcing.m  mpi_experiment.cc  my_boxplot.m  pca.m  plot_experiment.m  plotsol.m  powerspectrum.m  powerspectrumvoorbeeld.m  print0.m  qg_stopping_criterion.m  qg_wavelet_hybridESN.m  restore_times.m  run_experiment.sh  separator.m  setup.org  submit_mpi_experiment.sh  test.m  test2.m  test3.m  (+7 more)
matlab/MLQG_tests/: blockpermutation.m  test2.m  test3.m  test4.m  test_basic_things.m  test_jacobian.m  test_periodic.m  testdata.mat
matlab/UQ/: LyapSol.m  extend_path_desktop.m  extend_path_peregrine.m  innerprodmatrix.m  restart.m  showVpap.m  stochastic.m
matlab/example/: ChangeBasis.m  Testv.m  analyze.m  comp_moments.m  continuation.m  energies.m  extend_path.m  extend_path_desktop.m  extend_path_peregrine.m  newton.m  newtoncorrector.m  newtonfw.m  plotdistr.m  rdtimeslice.m  restart.m  stochastic.m  symtest.m  vars_timeseries.m
matlab/tests/: test_basic_things.m  testdata.mat
src/: CMakeLists.txt  QG.cpp  QG.hpp  QG_Data.cpp  QG_Data.hpp
